--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "node-unzip-service",
   "version": "1.0.0",
-  "description": "Microservicio para descomprimir ZIPs Deflate64 y devolver los archivos extraídos",
+  "description": "Microservicio gratuito para descomprimir ZIPs con Node.js y Express",
   "main": "index.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "unzipper": "^0.10.14",
-    "multer": "^1.4.5-lts.1"
+    "adm-zip": "^0.5.10"
   }
 }
-
