--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "node-unzip-service",
-  "version": "1.0.0",
-  "description": "Microservicio gratuito para descomprimir ZIPs con Node.js y Express",
+  "version": "1.1.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "adm-zip": "^0.5.10"
+    "adm-zip": "^0.5.12",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2"
   }
 }
